Доработана домашняя работа №1 1. Добавлена обработка возможных исключений в dao. 2. В контекст добавлен бин сервиса конвертации.